handscale/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: handscale
spec:
  selector:
    matchLabels:
      app: handscale
  serviceName: handscale
  replicas: 1
  template:
    metadata:
      labels:
        app: handscale
    spec:
      containers:
        - name: handscale
          image: docker.io/headscale/headscale:v0.27.1@sha256:cd37b30018575fd62f18419138d4e526bcf894e1d4e1aa1b08699cec1891ac23
          args: ["serve"]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              subPath: config.yaml
              mountPath: /etc/headscale/config.yaml
              readOnly: true
            - name: lib
              mountPath: /var/lib/headscale
            - name: run
              mountPath: /var/run/headscale

      volumes:
        - name: config
          configMap:
            name: handscale-config

  volumeClaimTemplates:
    - metadata:
        name: lib
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: run
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 512Mi
