handscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: handscale
spec:
  selector:
    app: handscale
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: vpn
      port: 9090
      targetPort: 9090
